# -*- mode: org -*-

* 0.1.1    UNRELEASED

* 0.1.0    2025-03-07

+ Add integration tests with real repositories (59)
+ Add unit tests that verify the created dag (#55)

** Bugfixes

+ Fix problem with escapes in tooltips (#57)
+ Handle tags referring to other tags (#51)
+ Fix tree info parser

* 0.0.9    2025-02-25

** Bugfixes

+ Fix python version dependency in pyproject.toml (#47)

* 0.0.8    2025-02-25

+ Add commits field to GitRepository (#41)
+ Add scaffolding for unit tests (#2)

** Bugfixes

+ Fix regex for tag info groups (#43)
+ Handle errors during decoding (#42)
+ Handle empty repository (#39)
+ Display only reachable stash-commits (#37)

* 0.0.7    2025-02-20

+ Rename --commit-message CLI flag (#19)
+ Form tooltips without using misc_info (#33)
+ Handle repositories cloned using --depth 1 (#26)

** Bugfixes

+ Fix tag parsing when there are CRLF characters (#30)

* 0.0.6    2025-02-13

+ Handle ascii control characters in messages (#27)
+ Change default encoding from latin-1 to utf-8 (#21)
+ Improve annotated tags misc info (#23)
+ Add annotated tag description to tooltip (#8)

* 0.0.5    2025-02-01

+ Display commit range
+ Sort nodes by label before creating DAG (#13)
+ Use commit message as label (#11)
+ Add flag to show unreachable commits (#14)